# cmake_template

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt
mylib/src/: mylib.cpp
src/: mylib.cpp
